# backend_actix

./: .env  Cargo.toml
migrations/: 20250610001025_create_notes_table.up.sql
src/: deadpoolc.rs  filesave.rs  jwttoken.rs  lib.rs  main.rs  passwordhash.rs  sectionmanagement.rs  sqlxc.rs  validator.rs
src/models/: user.rs
src/repository/: mod.rs  notes.rs  users.rs
uploads/chunks/: myfile123_1
