[package]
name = "backend_actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
env_logger = "0.11.8"
serde ={ version = "1", features = ["derive"]}
actix-multipart = "0.6"
futures-util = "0.3"
sanitize-filename = "0.5"

sqlx ={ version = "0.7", features = ["postgres","runtime-tokio-rustls", "migrate", "chrono","uuid"]}
deadpool-postgres = "0.12"
tokio-postgres = "0.7"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9.3"
chrono = "0.4.41"
